MONITORING/sqkb100/templates/elk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: monitoring  # Cambiado a 'monitoring'
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/secure-backends: "true"  # Solo si Kibana está configurado para SSL (HTTPS)
spec:
  rules:
  - host: kibana.smartquail.io  # Sustituye con el dominio o subdominio real que desees usar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana  # El nombre del servicio de Kibana
            port:
              number: 5601  # El puerto del servicio de Kibana
  # Si deseas habilitar TLS (HTTPS), agrega la siguiente sección:
  tls:
  - hosts:
    - kibana.smartquail.io  # El dominio para el que configurarás SSL
    secretName: kibana-tls-secret  # Asegúrate de tener un Secret con el certificado TLS adecuado
